# mmdetection3d_ros

./: README.md
mmdetection3d_ros/: README.md  package.xml  setup.cfg  setup.py
mmdetection3d_ros/config/: mono3d_inference_params.yaml
mmdetection3d_ros/launch/: mono3d_inference_launch.py
mmdetection3d_ros/mmdetection3d_ros/: inference.py  mmdetection3d_inference.py  mono3d_inference.py
synthetic_data/3D_files/4wheeledVehicle/VehicleSkeleton/: VehicleSkeleton.fbx  VehicleSkeletonBinary.fbx
synthetic_data/3D_files/4wheeledVehicle/bulldozer_carla/: bulldozer.fbx
synthetic_data/3D_files/4wheeledVehicle/forklift/: Forklift.c4d
synthetic_data/3D_files/4wheeledVehicle/military/: Humvee.fbx
synthetic_data/3D_files/4wheeledVehicle/mycar/: mycar.fbx
synthetic_data/3D_files/4wheeledVehicle/tesla/: SM_TeslaM3_v2.FBX
synthetic_data/3D_files/bulldozer_carla/: bulldozer.blend
synthetic_data/doc/: Import New Vehicle To Carla.docx
synthetic_data/scripts/: client_bounding_boxes.py
