<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mmdetection3d_ros</name>
  <version>0.1.0</version>
  <description>Wrap the mmdetection3d inference as a ROS2 node</description>
  <maintainer email="hsa150@sfu.ca">hossein</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>mmcv</depend>
  <depend>mmdet3d</depend>
  <depend>torch</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
